final changes for submission

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Contact</title>
     <link rel="stylesheet" href="/Users/jamesgeib 1/Documents/classwork/HW 01-Portfolio/Assets/CSS/style.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Baskervville|Dancing+Script|Playfair+Display&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -37,7 +38,8 @@
    
     
     <h1>Contact</h1>
-    <section class="contact-main">    
+    <section class="contact-main">
+        <h1 id="contact-main-header">For business, please reach out to me by filling out the form:</h1>    
         <form>
             <div>
                 <label class="name-label">Name:</label>
@@ -51,11 +53,11 @@
                 <label class="descrip-label">Description:</label>    
                     <input id="descrip-bar">
             </div>
-            <button>Submit</button>
+            <button id="submit">Submit</button>
         </form>
     </section> 
     <footer>
-
+        <h2>Copyright © 2019</h2>
     </footer>
 </body>
 </html>
