--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>About Me</title>
     <link rel="stylesheet" href="/Users/jamesgeib 1/Documents/classwork/HW 01-Portfolio/Assets/CSS/style.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Baskervville|Dancing+Script|Playfair+Display&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -62,14 +63,17 @@
                 <p>
                 I am ideally looking for a position that will allow me
                 to utilize my pre-exisiting skills in Adobe, and improve 
-                upon them as I use them throughout the job. 
+                upon them as I use them throughout the job. Alternatively, I am
+                also looking for a web development or data engineering position to
+                utilize my current set of coding languages. If you would like to see 
+                examples of my work, please consult my portfolio.
                 </p>
             </div>
         </section>
     
     </div>
     <footer>
-        <h2>My Social Media:</h2>
+        <h2>Copyright © 2019</h2>
 
     </footer>
    
