--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
         <h1 class="name">James Geib</h1>
         <ul>
             <li>
-                <a href="file:///Users/jamesgeib%201/Documents/classwork/HW%2001-Portfolio/index.html">
+                <a href="~/HW%2001-Portfolio/index.html">
                     <button class="button">About Me</button>
                 </a>
             </li>
             <li>
-                <a href="file:///Users/jamesgeib%201/Documents/classwork/HW%2001-Portfolio/contact.html?">
+                <a href="~/HW%2001-Portfolio/contact.html?">
                     <button class="button">Contact</button>
                 </a>
             </li>
             <li>
-                <a href="file:///Users/jamesgeib%201/Documents/classwork/HW%2001-Portfolio/portfolio.html">
+                <a href="~/HW%2001-Portfolio/portfolio.html">
                     <button class="button">Portfolio</button>
                 </a>
             </li>
@@ -39,7 +39,7 @@
         
         <section id="main">
             <div class="portrait-place">
-                <img id="portrait" src="/Users/jamesgeib 1/Documents/classwork/HW 01-Portfolio/Assets/Images/Portfolio_Portrait.jpeg">
+                <img id="portrait" src="~/HW 01-Portfolio/Assets/Images/Portfolio_Portrait.jpeg">
                 
             </div>
 
