--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About Me</title>
-    <link rel="stylesheet" href="/Assets/CSS/style.css">
+    <link rel="stylesheet" href="Assets/CSS/style.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Baskervville|Dancing+Script|Playfair+Display&display=swap" rel="stylesheet">
 </head>
@@ -19,7 +19,7 @@
                 </a>
             </li>
             <li>
-                <a href="contact.html">
+                <a href="contact.html?">
                     <button class="button">Contact</button>
                 </a>
             </li>
@@ -39,7 +39,7 @@
         
         <section id="main">
             <div class="portrait-place">
-                <img id="portrait" src="/Assets/Images/Portfolio_Portrait.jpeg">
+                <img id="portrait" src="Assets/Images/Portfolio_Portrait.jpeg">
                 
             </div>
 
