fixed file paths

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact</title>
-    <link rel="stylesheet" href="/Users/jamesgeib 1/Documents/classwork/HW 01-Portfolio/Assets/CSS/style.css">
+    <link rel="stylesheet" href="Assets/CSS/style.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Baskervville|Dancing+Script|Playfair+Display&display=swap" rel="stylesheet">
 </head>
@@ -16,17 +16,17 @@
             
               <ul>
                   <li>
-                      <a href="file:///Users/jamesgeib%201/Documents/classwork/HW%2001-Portfolio/index.html">
+                      <a href="index.html">
                           <button class="button">About Me</button>
                       </a>
                   </li>
                   <li>
-                      <a href="file:///Users/jamesgeib%201/Documents/classwork/HW%2001-Portfolio/contact.html?">
+                      <a href="contact.html?">
                           <button class="button">Contact</button>
                       </a>
                   </li>
                   <li>
-                      <a href="file:///Users/jamesgeib%201/Documents/classwork/HW%2001-Portfolio/portfolio.html">
+                      <a href="portfolio.html">
                           <button class="button">Portfolio</button>
                       </a>
                   </li>
